[metadata]
name = steganographer
summary = Hide messages inside an image.
author = Daniel Mota
author-email = AndroidKing@gmail.com
license = none
home-page = https://github.com/MotaDan/steganographerPY
description-file = README.md
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Environment :: Console
	Environment :: Win32 (MS Windows)
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: End Users/Desktop
	Intended Audience :: Information Technology
	Natural Language :: English
	Operating System :: Microsoft :: Windows
	Operating System :: Microsoft :: Windows :: Windows 7
	Topic :: Multimedia :: Graphics :: Editors
	Topic :: Other/Nonlisted Topic
	Topic :: Utilities

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = steganographer.module:function
# For example:
# console_scripts =
#     fibonacci = steganographer.skeleton:run
# as well as other entry_points.
console_scripts =
     steganographer = steganographer.steganographer:main


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    steganographer
# data_files =
#    share/steganographer_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --doctest-modules --cov steganographer --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
